# patterns-in-c-cpp

./: .gitignore  CMakeLists.txt  README.md
cpp/logger/: README.md  logger.hh
cpp/thread_pool/: CMakeLists.txt  README.md  joiner_thread.hh  stealing_queue.hh  stealing_thread_pool.hh  thread_pool.cc
cpp/threadsafe_container/: queue.hh
doc/: embedded_C_programming_design_patterns.md
test/: CMakeLists.txt  test_thread_pool.cc
thread_manager/: README.md  f_wrapper.hh
thread_manager/thread_pool/: CMakeLists.txt  stealing_thread_pool.hh  thread_pool.cc  thread_pool.hh
thread_manager/threadsafe_container/: queue.hh
